# grupo-18-tech-challenger-fase-1

./: .dockerignore  .env.azure.example  .gitignore  .webignore  DEPLOY_STEPS.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  VIDEO.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-azure.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  main_churn-prediction-api.yml  tests.yml
.qwen/: settings.json
data/raw/: .gitignore  Telco_customer_churn.csv.dvc
docs/: 01_eda.md  02_feature_engineering.md  03_modeling.md  DEPLOY_AZURE.md  MONITORING.md  api_inference.md  arquitetura-deploy.md  canvas.md  grafana_dashboard.json  roteiro.md
mlflow_tracking/0/: meta.yaml
mlflow_tracking/554298265250474829/: meta.yaml
mlflow_tracking/554298265250474829/1ebb7501e54043708ffaea7640412d08/: meta.yaml
mlflow_tracking/554298265250474829/1ebb7501e54043708ffaea7640412d08/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/1ebb7501e54043708ffaea7640412d08/outputs/m-d4db1785a2574dbda33617ba2a2b7e82/: meta.yaml
mlflow_tracking/554298265250474829/38812763e8ae47739d829545facc6fde/: meta.yaml
mlflow_tracking/554298265250474829/38812763e8ae47739d829545facc6fde/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/38812763e8ae47739d829545facc6fde/outputs/m-a77c2e7bba08438884bf82a680db94a8/: meta.yaml
mlflow_tracking/554298265250474829/6d818dd23f2c40588ee0d79434e90244/: meta.yaml
mlflow_tracking/554298265250474829/6d818dd23f2c40588ee0d79434e90244/artifacts/models/: knn_pipeline.pkl
mlflow_tracking/554298265250474829/6d818dd23f2c40588ee0d79434e90244/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/6d818dd23f2c40588ee0d79434e90244/outputs/m-2f1d21c491664b43aff68dfec3c324c3/: meta.yaml
mlflow_tracking/554298265250474829/94e74557993a42d2839b7c931887ba91/: meta.yaml
mlflow_tracking/554298265250474829/94e74557993a42d2839b7c931887ba91/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/94e74557993a42d2839b7c931887ba91/outputs/m-3c4152032c9146a59ca74a9484122cb4/: meta.yaml
mlflow_tracking/554298265250474829/ad0702ed910b4fa1ba43a721bb26314a/: meta.yaml
mlflow_tracking/554298265250474829/ad0702ed910b4fa1ba43a721bb26314a/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/ad0702ed910b4fa1ba43a721bb26314a/outputs/m-68f1b1dca3484680a520f518c3dfd1ba/: meta.yaml
mlflow_tracking/554298265250474829/ad0702ed910b4fa1ba43a721bb26314a/params/: classifier__dropout
mlflow_tracking/554298265250474829/af2c21ad322b47dd8f77673fd8136394/: meta.yaml
mlflow_tracking/554298265250474829/af2c21ad322b47dd8f77673fd8136394/artifacts/models/: svm_pipeline.pkl
mlflow_tracking/554298265250474829/af2c21ad322b47dd8f77673fd8136394/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/af2c21ad322b47dd8f77673fd8136394/outputs/m-668cc64d6fd34d3cb4f895ea977f6001/: meta.yaml
mlflow_tracking/554298265250474829/f18654ff5ac8471caa752f1f77eb9bdb/: meta.yaml
mlflow_tracking/554298265250474829/f18654ff5ac8471caa752f1f77eb9bdb/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/f18654ff5ac8471caa752f1f77eb9bdb/outputs/m-065225875ee343da966b856b72b6bf61/: meta.yaml
mlflow_tracking/554298265250474829/f5f7a3790eaf4dbe8579990ec2d71b59/: meta.yaml
mlflow_tracking/554298265250474829/f5f7a3790eaf4dbe8579990ec2d71b59/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/f5f7a3790eaf4dbe8579990ec2d71b59/outputs/m-548b99eecca74c4d9365cb0c02cd3d7a/: meta.yaml
mlflow_tracking/554298265250474829/models/m-065225875ee343da966b856b72b6bf61/: meta.yaml
mlflow_tracking/554298265250474829/models/m-065225875ee343da966b856b72b6bf61/artifacts/: MLmodel  conda.yaml  requirements.txt
mlflow_tracking/554298265250474829/models/m-065225875ee343da966b856b72b6bf61/metrics/: accuracy  cv_roc_auc  f1  precision  recall  roc_auc
mlflow_tracking/554298265250474829/models/m-2f1d21c491664b43aff68dfec3c324c3/: meta.yaml
mlflow_tracking/554298265250474829/models/m-2f1d21c491664b43aff68dfec3c324c3/artifacts/: MLmodel  requirements.txt
mlflow_tracking/554298265250474829/models/m-2f1d21c491664b43aff68dfec3c324c3/metrics/: accuracy  (+5 more)
mlflow_tracking/554298265250474829/models/m-3c4152032c9146a59ca74a9484122cb4/: meta.yaml
mlflow_tracking/554298265250474829/models/m-548b99eecca74c4d9365cb0c02cd3d7a/: meta.yaml
mlflow_tracking/554298265250474829/models/m-668cc64d6fd34d3cb4f895ea977f6001/: meta.yaml
mlflow_tracking/554298265250474829/models/m-68f1b1dca3484680a520f518c3dfd1ba/: meta.yaml
mlflow_tracking/554298265250474829/models/m-a77c2e7bba08438884bf82a680db94a8/: meta.yaml
mlflow_tracking/554298265250474829/models/m-d4db1785a2574dbda33617ba2a2b7e82/: meta.yaml
models/: lightgbm_pipeline.pkl  logistic_regression_pipeline.pkl  neural_network_pipeline.pkl  xgboost_pipeline.pkl
monitoring/: alloy-config.alloy  deploy-alloy.sh
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  eda.ipynb  modelo_pytorch.ipynb
scripts/: post_deploy_cleanup.sh
src/: README.md  main.py  metrics.py  middleware.py  pyproject.toml  rate_limit.py
src/api/v1/: router.py
src/core/: config.py  logging.py
src/routers/: health.py  inference.py  metrics.py
src/schemas/: health.py  inference.py
src/services/: inference_service.py
src/tests/: conftest.py  test_health.py  test_inference.py  test_metrics.py  test_predict.py
src/tests/unit/: test_health_unit.py
tests/: conftest.py  test_rate_limit.py
tests/integration/: test_health.py  test_inference.py  test_metrics.py
tests/schema/: test_health_schema.py  test_inference_schema.py
tests/smoke/: test_health_smoke.py  test_inference_smoke.py
tests/unit/: test_health_unit.py  test_inference_unit.py
utils/: feature_selection.py  metrics.py  neural_net.py
(+50 files in other folders)
