[project]
name = "grupo-18-tech-challenger-fase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.12",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "lightgbm>=4.5",
    "matplotlib>=3.9",
    "mlflow>=2.13",
    "notebook>=7.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pandera>=0.30.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "structlog>=25.5.0",
    "torch>=2.3",
    "uvicorn[standard]>=0.29",
    "xgboost>=2.1",
]

