[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "predict-api"
version = "1.0.0"
description = "Predict API - Tech Challenger - Fase 1"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.0.0",
    "torch>=2.3",
    "lightgbm>=4.6.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    # test
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",          # AsyncClient para testar FastAPI
    # lint / format
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]


# ---------------------------------------------------------------------------
# Setuptools — descoberta automática de pacotes
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


# ---------------------------------------------------------------------------
# Ruff — linting + formatting (substitui flake8, isort, pyupgrade, etc.)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — controlado pelo formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


# ---------------------------------------------------------------------------
# Mypy — verificação estática de tipos
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: testes unitários isolados",
    "integration: testes que sobem a aplicação completa",
]
